# python-openstackclient

./: README.rst  requirements.txt  setup.cfg  test-requirements.txt
openstackclient/: shell.py
openstackclient/common/: clientmanager.py
openstackclient/network/: client.py  common.py
openstackclient/network/v2_0/: __init__.py  dhcp.py  floatingip.py  gateway.py  network.py  port.py  router.py  security_group.py  security_group_rule.py  subnet.py
openstackclient/network/v2_0/fw/: firewall.py
openstackclient/network/v2_0/lb/: healthmonitor.py  member.py  pool.py  vip.py
openstackclient/network/v2_0/vpn/: ikepolicy.py  ipsecpolicy.py  service.py
openstackclient/tests/: fakes.py
openstackclient/tests/network/: common.py  test_client.py  test_common.py
openstackclient/tests/network/v2_0/: common.py  test_dhcp.py  test_dhcp_integration.py  test_floatingip.py  test_floatingip_integration.py  test_gateway.py  test_gateway_integration.py  test_network.py  test_network_integration.py  test_port.py  test_port_integration.py  test_router.py  test_router_aft.py  test_router_integration.py  test_security_group.py  test_security_group_integration.py  test_security_group_rule.py  test_security_group_rule_integration.py  test_subnet.py  test_subnet_integration.py
openstackclient/tests/network/v2_0/fw/: test_firewall.py  test_firewall_integration.py
openstackclient/tests/network/v2_0/lb/: test_healthmonitor.py  test_healthmonitor_integration.py  test_member.py  test_member_integration.py  test_pool.py  test_pool_integration.py  test_vip.py  test_vip_integration.py
openstackclient/tests/network/v2_0/vpn/: test_ikepolicy.py  test_ikepolicy_integration.py  test_ipsecpolicy.py  test_ipsecpolicy_integration.py  test_service.py  test_service_integration.py
