[metadata]
name = python-openstackclient
summary = OpenStack Command-line Client
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://wiki.openstack.org/OpenStackClient
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    openstackclient

[entry_points]
console_scripts =
    openstack = openstackclient.shell:main

openstack.cli =

openstack.cli.extension =
    compute = openstackclient.compute.client
    image = openstackclient.image.client
    object_store = openstackclient.object.client
    volume = openstackclient.volume.client
    network = openstackclient.network.client

openstack.common =
    limits_show = openstackclient.common.limits:ShowLimits
    quota_set = openstackclient.common.quota:SetQuota
    quota_show = openstackclient.common.quota:ShowQuota

openstack.compute.v2 =
    agent_create = openstackclient.compute.v2.agent:CreateAgent
    agent_delete = openstackclient.compute.v2.agent:DeleteAgent
    agent_list = openstackclient.compute.v2.agent:ListAgent
    agent_set = openstackclient.compute.v2.agent:SetAgent

    aggregate_add_host = openstackclient.compute.v2.aggregate:AddAggregateHost
    aggregate_create = openstackclient.compute.v2.aggregate:CreateAggregate
    aggregate_delete = openstackclient.compute.v2.aggregate:DeleteAggregate
    aggregate_list = openstackclient.compute.v2.aggregate:ListAggregate
    aggregate_remove_host = openstackclient.compute.v2.aggregate:RemoveAggregateHost
    aggregate_set = openstackclient.compute.v2.aggregate:SetAggregate
    aggregate_show = openstackclient.compute.v2.aggregate:ShowAggregate

    compute_service_list = openstackclient.compute.v2.service:ListService
    compute_service_set = openstackclient.compute.v2.service:SetService

    console_log_show = openstackclient.compute.v2.console:ShowConsoleLog
    console_url_show = openstackclient.compute.v2.console:ShowConsoleURL

    flavor_create = openstackclient.compute.v2.flavor:CreateFlavor
    flavor_delete = openstackclient.compute.v2.flavor:DeleteFlavor
    flavor_list = openstackclient.compute.v2.flavor:ListFlavor
    flavor_show = openstackclient.compute.v2.flavor:ShowFlavor

    host_list = openstackclient.compute.v2.host:ListHost
    host_show = openstackclient.compute.v2.host:ShowHost

    hypervisor_list = openstackclient.compute.v2.hypervisor:ListHypervisor
    hypervisor_show = openstackclient.compute.v2.hypervisor:ShowHypervisor

    ip_fixed_add = openstackclient.compute.v2.fixedip:AddFixedIP
    ip_fixed_remove = openstackclient.compute.v2.fixedip:RemoveFixedIP

    ip_floating_create = openstackclient.network.v2_0.floatingip:CreateFloatingIp
    ip_floating_delete = openstackclient.network.v2_0.floatingip:DeleteFloatingIp
    ip_floating_list = openstackclient.network.v2_0.floatingip:ListFloatingIp
    ip_floating_show = openstackclient.network.v2_0.floatingip:ShowFloatingIp

    ip_floating_pool_list = openstackclient.compute.v2.floatingippool:ListFloatingIPPool

    keypair_create = openstackclient.compute.v2.keypair:CreateKeypair
    keypair_delete = openstackclient.compute.v2.keypair:DeleteKeypair
    keypair_list = openstackclient.compute.v2.keypair:ListKeypair
    keypair_show = openstackclient.compute.v2.keypair:ShowKeypair

    project_usage_list = openstackclient.compute.v2.usage:ListUsage

    server_add_security_group = openstackclient.compute.v2.server:AddServerSecurityGroup
    server_add_volume = openstackclient.compute.v2.server:AddServerVolume
    server_create = openstackclient.compute.v2.server:CreateServer
    server_delete = openstackclient.compute.v2.server:DeleteServer
    server_image_create = openstackclient.compute.v2.server:CreateServerImage
    server_list = openstackclient.compute.v2.server:ListServer
    server_lock = openstackclient.compute.v2.server:LockServer
    server_migrate = openstackclient.compute.v2.server:MigrateServer
    server_pause = openstackclient.compute.v2.server:PauseServer
    server_reboot = openstackclient.compute.v2.server:RebootServer
    server_rebuild = openstackclient.compute.v2.server:RebuildServer
    server_remove_security_group = openstackclient.compute.v2.server:RemoveServerSecurityGroup
    server_remove_volume = openstackclient.compute.v2.server:RemoveServerVolume
    server_rescue = openstackclient.compute.v2.server:RescueServer
    server_resize = openstackclient.compute.v2.server:ResizeServer
    server_resume = openstackclient.compute.v2.server:ResumeServer
    server_set = openstackclient.compute.v2.server:SetServer
    server_show = openstackclient.compute.v2.server:ShowServer
    server_ssh = openstackclient.compute.v2.server:SshServer
    server_suspend = openstackclient.compute.v2.server:SuspendServer
    server_unlock = openstackclient.compute.v2.server:UnlockServer
    server_unpause = openstackclient.compute.v2.server:UnpauseServer
    server_unrescue = openstackclient.compute.v2.server:UnrescueServer
    server_unset = openstackclient.compute.v2.server:UnsetServer

openstack.identity.v2_0 =
    ec2_credentials_create = openstackclient.identity.v2_0.ec2creds:CreateEC2Creds
    ec2_credentials_delete = openstackclient.identity.v2_0.ec2creds:DeleteEC2Creds
    ec2_credentials_list = openstackclient.identity.v2_0.ec2creds:ListEC2Creds
    ec2_credentials_show = openstackclient.identity.v2_0.ec2creds:ShowEC2Creds

    endpoint_create = openstackclient.identity.v2_0.endpoint:CreateEndpoint
    endpoint_delete = openstackclient.identity.v2_0.endpoint:DeleteEndpoint
    endpoint_list = openstackclient.identity.v2_0.endpoint:ListEndpoint
    endpoint_show = openstackclient.identity.v2_0.endpoint:ShowEndpoint

    project_create = openstackclient.identity.v2_0.project:CreateProject
    project_delete = openstackclient.identity.v2_0.project:DeleteProject
    project_list = openstackclient.identity.v2_0.project:ListProject
    project_set = openstackclient.identity.v2_0.project:SetProject
    project_show = openstackclient.identity.v2_0.project:ShowProject

    role_add = openstackclient.identity.v2_0.role:AddRole
    role_create = openstackclient.identity.v2_0.role:CreateRole
    role_delete = openstackclient.identity.v2_0.role:DeleteRole
    role_list =openstackclient.identity.v2_0.role:ListRole
    role_remove = openstackclient.identity.v2_0.role:RemoveRole
    role_show =openstackclient.identity.v2_0.role:ShowRole

    service_create = openstackclient.identity.v2_0.service:CreateService
    service_delete = openstackclient.identity.v2_0.service:DeleteService
    service_list =openstackclient.identity.v2_0.service:ListService
    service_show =openstackclient.identity.v2_0.service:ShowService

    user_role_list = openstackclient.identity.v2_0.role:ListUserRole

    user_create = openstackclient.identity.v2_0.user:CreateUser
    user_delete = openstackclient.identity.v2_0.user:DeleteUser
    user_list = openstackclient.identity.v2_0.user:ListUser
    user_set = openstackclient.identity.v2_0.user:SetUser
    user_show = openstackclient.identity.v2_0.user:ShowUser

openstack.identity.v3 =
    access_token_authenticate = openstackclient.identity.v3.token:AuthenticateAccessToken
    access_token_create = openstackclient.identity.v3.token:CreateAccessToken
    access_token_delete = openstackclient.identity.v3.token:DeleteAccessToken
    access_token_list = openstackclient.identity.v3.token:ListAccessToken

    consumer_create = openstackclient.identity.v3.consumer:CreateConsumer
    consumer_delete = openstackclient.identity.v3.consumer:DeleteConsumer
    consumer_list = openstackclient.identity.v3.consumer:ListConsumer
    consumer_set = openstackclient.identity.v3.consumer:SetConsumer
    consumer_show = openstackclient.identity.v3.consumer:ShowConsumer

    credential_create = openstackclient.identity.v3.credential:CreateCredential
    credential_delete = openstackclient.identity.v3.credential:DeleteCredential
    credential_list = openstackclient.identity.v3.credential:ListCredential
    credential_set = openstackclient.identity.v3.credential:SetCredential
    credential_show = openstackclient.identity.v3.credential:ShowCredential

    domain_create = openstackclient.identity.v3.domain:CreateDomain
    domain_delete = openstackclient.identity.v3.domain:DeleteDomain
    domain_list = openstackclient.identity.v3.domain:ListDomain
    domain_set = openstackclient.identity.v3.domain:SetDomain
    domain_show = openstackclient.identity.v3.domain:ShowDomain

    endpoint_create = openstackclient.identity.v3.endpoint:CreateEndpoint
    endpoint_delete = openstackclient.identity.v3.endpoint:DeleteEndpoint
    endpoint_set = openstackclient.identity.v3.endpoint:SetEndpoint
    endpoint_show = openstackclient.identity.v3.endpoint:ShowEndpoint
    endpoint_list = openstackclient.identity.v3.endpoint:ListEndpoint

    group_add_user = openstackclient.identity.v3.group:AddUserToGroup
    group_contains_user = openstackclient.identity.v3.group:CheckUserInGroup
    group_create = openstackclient.identity.v3.group:CreateGroup
    group_delete = openstackclient.identity.v3.group:DeleteGroup
    group_list = openstackclient.identity.v3.group:ListGroup
    group_remove_user = openstackclient.identity.v3.group:RemoveUserFromGroup
    group_set = openstackclient.identity.v3.group:SetGroup
    group_show = openstackclient.identity.v3.group:ShowGroup

    policy_create = openstackclient.identity.v3.policy:CreatePolicy
    policy_delete = openstackclient.identity.v3.policy:DeletePolicy
    policy_list = openstackclient.identity.v3.policy:ListPolicy
    policy_set = openstackclient.identity.v3.policy:SetPolicy
    policy_show = openstackclient.identity.v3.policy:ShowPolicy

    project_create = openstackclient.identity.v3.project:CreateProject
    project_delete = openstackclient.identity.v3.project:DeleteProject
    project_list = openstackclient.identity.v3.project:ListProject
    project_set = openstackclient.identity.v3.project:SetProject
    project_show = openstackclient.identity.v3.project:ShowProject

    request_token_authorize = openstackclient.identity.v3.token:AuthorizeRequestToken
    request_token_create = openstackclient.identity.v3.token:CreateRequestToken

    role_add = openstackclient.identity.v3.role:AddRole
    role_create = openstackclient.identity.v3.role:CreateRole
    role_delete = openstackclient.identity.v3.role:DeleteRole
    role_list = openstackclient.identity.v3.role:ListRole
    role_remove = openstackclient.identity.v3.role:RemoveRole
    role_show = openstackclient.identity.v3.role:ShowRole
    role_set = openstackclient.identity.v3.role:SetRole

    service_create = openstackclient.identity.v3.service:CreateService
    service_delete = openstackclient.identity.v3.service:DeleteService
    service_list = openstackclient.identity.v3.service:ListService
    service_show = openstackclient.identity.v3.service:ShowService
    service_set = openstackclient.identity.v3.service:SetService

    user_create = openstackclient.identity.v3.user:CreateUser
    user_delete = openstackclient.identity.v3.user:DeleteUser
    user_list = openstackclient.identity.v3.user:ListUser
    user_set = openstackclient.identity.v3.user:SetUser
    user_show = openstackclient.identity.v3.user:ShowUser

openstack.image.v1 =
    image_create = openstackclient.image.v1.image:CreateImage
    image_delete = openstackclient.image.v1.image:DeleteImage
    image_list = openstackclient.image.v1.image:ListImage
    image_save = openstackclient.image.v1.image:SaveImage
    image_set = openstackclient.image.v1.image:SetImage
    image_show = openstackclient.image.v1.image:ShowImage

openstack.image.v2 =
    image_delete = openstackclient.image.v2.image:DeleteImage
    image_list = openstackclient.image.v2.image:ListImage
    image_save = openstackclient.image.v2.image:SaveImage
    image_show = openstackclient.image.v2.image:ShowImage

openstack.object_store.v1 =
    container_list = openstackclient.object.v1.container:ListContainer
    container_show = openstackclient.object.v1.container:ShowContainer
    object_list = openstackclient.object.v1.object:ListObject
    object_show = openstackclient.object.v1.object:ShowObject

openstack.volume.v1 =
    snapshot_create = openstackclient.volume.v1.snapshot:CreateSnapshot
    snapshot_delete = openstackclient.volume.v1.snapshot:DeleteSnapshot
    snapshot_list = openstackclient.volume.v1.snapshot:ListSnapshot
    snapshot_set = openstackclient.volume.v1.snapshot:SetSnapshot
    snapshot_show = openstackclient.volume.v1.snapshot:ShowSnapshot

    backup_create = openstackclient.volume.v1.backup:CreateBackup
    backup_delete = openstackclient.volume.v1.backup:DeleteBackup
    backup_list = openstackclient.volume.v1.backup:ListBackup
    backup_restore = openstackclient.volume.v1.backup:RestoreBackup
    backup_show = openstackclient.volume.v1.backup:ShowBackup

    volume_create = openstackclient.volume.v1.volume:CreateVolume
    volume_delete = openstackclient.volume.v1.volume:DeleteVolume
    volume_list = openstackclient.volume.v1.volume:ListVolume
    volume_set = openstackclient.volume.v1.volume:SetVolume
    volume_show = openstackclient.volume.v1.volume:ShowVolume
    volume_unset = openstackclient.volume.v1.volume:UnsetVolume

    volume_type_create = openstackclient.volume.v1.type:CreateVolumeType
    volume_type_delete = openstackclient.volume.v1.type:DeleteVolumeType
    volume_type_list = openstackclient.volume.v1.type:ListVolumeType
    volume_type_set = openstackclient.volume.v1.type:SetVolumeType
    volume_type_unset = openstackclient.volume.v1.type:UnsetVolumeType

openstack.network.v2_0 =
    dhcp_agent_network_add = neutronclient.neutron.v2_0.agentscheduler:AddNetworkToDhcpAgent
    dhcp_agent_network_remove = neutronclient.neutron.v2_0.agentscheduler:RemoveNetworkFromDhcpAgent
    dhcp_agent_network_list = neutronclient.neutron.v2_0.agentscheduler:ListNetworksOnDhcpAgent
    l3_agent_add_router = neutronclient.neutron.v2_0.agentscheduler:AddRouterToL3Agent
    l3_agent_remove_router = neutronclient.neutron.v2_0.agentscheduler:RemoveRouterFromL3Agent
    l3_agent_list = neutronclient.neutron.v2_0.agentscheduler:ListRoutersOnL3Agent
    l3_agent_hosting_router = neutronclient.neutron.v2_0.agentscheduler:ListL3AgentsHostingRouter
    lb_list_pools = neutronclient.neutron.v2_0.agentscheduler:ListPoolsOnLbaasAgent
    lb_get_hosting_pool = neutronclient.neutron.v2_0.agentscheduler:GetLbaasAgentHostingPool
    extension_list = neutronclient.neutron.v2_0.extension:ListExt
    extension_show = neutronclient.neutron.v2_0.extension:ShowExt
    network_profile_list = neutronclient.neutron.v2_0.networkprofile:ListNetworkProfile
    network_profile_show = neutronclient.neutron.v2_0.networkprofile:ShowNetworkProfile
    network_profile_create = neutronclient.neutron.v2_0.networkprofile:CreateNetworkProfile
    network_profile_delete = neutronclient.neutron.v2_0.networkprofile:DeleteNetworkProfile
    network_profile_update = neutronclient.neutron.v2_0.networkprofile:UpdateNetworkProfile
    network_add_gateway = openstackclient.network.v2_0.network:AddGatewayNetwork
    network_create = openstackclient.network.v2_0.network:CreateNetwork
    network_delete = openstackclient.network.v2_0.network:DeleteNetwork
    network_list = openstackclient.network.v2_0.network:ListNetwork
    network_remove_gateway = openstackclient.network.v2_0.network:RemoveGatewayNetwork
    network_set = openstackclient.network.v2_0.network:SetNetwork
    network_show = openstackclient.network.v2_0.network:ShowNetwork
    gateway_create = openstackclient.network.v2_0.gateway:CreateGateway
    gateway_delete = openstackclient.network.v2_0.gateway:DeleteGateway
    gateway_list = openstackclient.network.v2_0.gateway:ListGateway
    gateway_set = openstackclient.network.v2_0.gateway:SetGateway
    gateway_show = openstackclient.network.v2_0.gateway:ShowGateway
    queue_list = neutronclient.neutron.v2_0.nvp_qos_queue:ListQoSQueue
    queue_show = neutronclient.neutron.v2_0.nvp_qos_queue:ShowQoSQueue
    queue_create = neutronclient.neutron.v2_0.nvp_qos_queue:CreateQoSQueue
    queue_delete = neutronclient.neutron.v2_0.nvp_qos_queue:DeleteQoSQueue
    policy_profile_list = neutronclient.neutron.v2_0.policyprofile:ListPolicyProfile
    policy_profile_show = neutronclient.neutron.v2_0.policyprofile:ShowPolicyProfile
    policy_profile_update = neutronclient.neutron.v2_0.policyprofile:UpdatePolicyProfile
    port_list = openstackclient.network.v2_0.port:ListPort
    port_create = openstackclient.network.v2_0.port:CreatePort
    port_delete = openstackclient.network.v2_0.port:DeletePort
    port_set = openstackclient.network.v2_0.port:SetPort
    port_show = openstackclient.network.v2_0.port:ShowPort
    port_add = openstackclient.network.v2_0.port:AddPort
    port_remove = openstackclient.network.v2_0.port:RemovePort
    router_create = openstackclient.network.v2_0.router:CreateRouter
    router_delete = openstackclient.network.v2_0.router:DeleteRouter
    router_list = openstackclient.network.v2_0.router:ListRouter
    router_set = openstackclient.network.v2_0.router:SetRouter
    router_show = openstackclient.network.v2_0.router:ShowRouter
    router_add_interface = openstackclient.network.v2_0.router:AddInterfaceRouter
    router_remove_interface = openstackclient.network.v2_0.router:RemoveInterfaceRouter
    security_group_create = openstackclient.network.v2_0.security_group:CreateSecurityGroup
    security_group_delete = openstackclient.network.v2_0.security_group:DeleteSecurityGroup
    security_group_list = openstackclient.network.v2_0.security_group:ListSecurityGroup
    security_group_set = openstackclient.network.v2_0.security_group:SetSecurityGroup
    security_group_show = openstackclient.network.v2_0.security_group:ShowSecurityGroup
    security_group_rule_create = openstackclient.network.v2_0.security_group_rule:CreateSecurityGroupRule
    security_group_rule_delete = openstackclient.network.v2_0.security_group_rule:DeleteSecurityGroupRule
    security_group_rule_list = openstackclient.network.v2_0.security_group_rule:ListSecurityGroupRule
    security_group_rule_show = openstackclient.network.v2_0.security_group_rule:ShowSecurityGroupRule
    subnet_create = openstackclient.network.v2_0.subnet:CreateSubnet
    subnet_delete = openstackclient.network.v2_0.subnet:DeleteSubnet
    subnet_list = openstackclient.network.v2_0.subnet:ListSubnet
    subnet_show = openstackclient.network.v2_0.subnet:ShowSubnet
    subnet_set = openstackclient.network.v2_0.subnet:SetSubnet

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
